# ldt2025-backend

./: .env.example  .gitignore  Dockerfile  LICENCE  README.md  alembic.ini  app.db  pyproject.toml  requirements.txt  settings.py
api/: deps.py  main.py
api/routers/: security_router.py  user_router.py
db/: database.sqlite  db.py
db/models/: __init__.py  user.py
db/repository/: repository.py  user_repository.py
run/: app.Dockerfile  docker-compose.dev.yml  docker-compose.yml  emulator.Dockerfile  migration.Dockerfile  start.sh
run/db_init/: 001_base_initial.sh
run/secrets/: app_migrator_password  app_readonly_password  app_runtime_password  keycloak_db_password  keycloak_password  pg_su_password
src/app/: bootstrap.py  main.py  middlewares.py
src/app/common/: container.py  ctg.py  dataclass_mixins.py  db.py  exceptions.py  patient.py  provider.py  settings.py
src/app/common/settings/: __init__.py  db.py  keycloak.py  web.py
src/app/modules/auth/: health.py  router.py  schemas.py
src/app/modules/core/: settings.py
src/db_ceed/: ceed.py
src/emulator/: main.py  sending_signals.py
src/migrations/: env.py
src/migrations/versions/: 2025_10_01_0025-create_database.py
src/static/: mock_graphic.json
src/storage_server/: bootstrap.py  di_container.py  logger.py  main.py  settings.py
src/storage_server/application/: add_ctg_graphic_file.py  create_patient.py  get_ctg_graphic_archive.py  read_ctg_result.py  read_history.py  read_patient.py  save_ctg_history.py  save_ctg_result.py  update_patient.py
src/storage_server/application/dto/: ctg_graphic_file.py  ctg_history.py  ctg_result.py  patient.py
src/storage_server/application/exceptions/: application.py  ctg_graphic_archive.py  patient_repository.py
src/storage_server/application/ports/: ctg_history_repo.py  ctg_result_repo.py  patient_repo.py
src/storage_server/domain/: ctg_graphic_archive.py  ctg_history.py  ctg_result.py  mixin.py  patient.py
src/storage_server/infrastructure/repositories/: ctg_history.py  ctg_result.py  patient.py
src/storage_server/infrastructure/routes/: __init__.py  ctg_graphic_archive.py  (+3 more)
(+88 files in other folders)
